--- a/_config.yaml
+++ b/_config.yaml
@@ -3,7 +3,7 @@ copyright:   "2022"
 author:      "Linus A. W."
 title:       "OS231: Operating Systems 2022-2"
 githublink:  "https://github.com/linusabhyasaui/os231/"
-myloglink:   "TXT/mylog.txt"
+myloglink:   "mylog.txt"
 encoding:    UTF-8
 markdown:    kramdown
 input:       GFM
